<resources>
    <string name="app_name">Oops</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_color_primary">TextColorPrimary</string>
    <string name="text_color_secondary">TextColorSecondary</string>
    <string name="custom_attr_color1">CustomAttrColor 1</string>
    <string name="custom_attr_color2">CustomAttrColor 2</string>
    <string name="check_box">CheckBox</string>
    <string name="radio_button">RadioButton</string>
    <string name="switch_dark">Switch Dark</string>
    <string name="seek_bar">SeekBar</string>
    <string name="progress_bar">ProgressBar</string>
    <string name="edit_text">EditText</string>
    <string name="text_input"><![CDATA[TextInputLayout&TextInputEditText]]></string>
    <string name="card_view">CardView</string>
    <string name="material_card_view">MaterialCardView</string>
    <string name="more_action">More Action</string>
    <string name="button_show_dialog"><![CDATA[APPCOMPAT BUTTON & SHOW DIALOG]]></string>
    <string name="nested_scroll_view">NestedScrollView</string>
    <string name="list_view">ListView</string>
    <string name="scroll_view">ScrollView</string>
    <string name="recycler_view">RecyclerView</string>
    <string name="change_font">CHANGE FONT</string>
    <string name="disable_appcompat_button">DISABLE APPCOMPAT BUTTON</string>
    <string name="borderless_appcompat_button">BORDERLESS APPCOMPAT BUTTON</string>
    <string name="disable_borderless_appcompat_button">DISABLE BORDERLESS APPCOMPAT BUTTON</string>
    <string name="change_image">change image</string>
    <string name="next">Next</string>
    <string name="menu_search">Search</string>
    <string name="go_next">Next</string>
    <string name="light_theme">Light Theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="rating_bar">RatingBar</string>
    <string name="chinese">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tincidunt mattis eros. Suspendisse potenti. Nulla vel.\n天道下济而光明，地道卑而上行。天道亏盈而益谦，地道变盈而流谦，鬼神害盈而福谦，人道恶盈而好谦。谦，尊而光，卑而不可逾，君子之终也。</string>
</resources>
