<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/action_change_image"
        android:orderInCategory="100"
        android:title="@string/change_image"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_menu_slideshow"
        android:orderInCategory="100"
        android:title="@string/next"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_more"
        android:orderInCategory="100"
        android:title="@string/more_action"
        app:showAsAction="never" />
</menu>
